--- a/api-diff-viewer/src/app/compare-response/compare-response.component.html
+++ b/api-diff-viewer/src/app/compare-response/compare-response.component.html
@@ -1,1 +1,20 @@
-<button class="btn btn-primary compare-btn">Compare</button>
+<!-- Compare Modal
+<div id="compareModal" class="modal fade" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">API Response Comparison</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <div class="d-flex justify-content-between">
+                    <pre class="bg-light p-2">{{ leftResponse | json }}</pre>
+                    <pre class="bg-light p-2">{{ rightResponse | json }}</pre>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div> -->
